# org2any

./: .gitignore  .gitmodules  ChangeLog.md  LICENSE  README.md  cabal.project  cabal.project.freeze  default.nix  hie.yaml  lib.nix  org2any-cli.nix  org2any-emacs.nix  org2any.cabal  org2any.el  package.yaml  release.nix  run-emacs-tests.sh  shell.nix  stack.yaml
.github/workflows/: release.yaml  tests.yml  tests_emacs.yaml
app/: Args.hs  Main.hs
src/: AppleScript.hs  Command.hs  Executor.hs  Lib.hs  Logging.hs  Parser.hs  Types.hs
src/AppleScript/: Internal.hs  Types.hs
src/Data/OrgMode/Sync/: AppleScript.hs  Command.hs  Executor.hs  Logging.hs  Parser.hs  ResultT.hs  Types.hs
src/Data/OrgMode/Sync/AppleScript/: Internal.hs  Types.hs
src/Data/OrgMode/Sync/OrgMode/: Parsing.hs
test/: AppleScriptSpec.hs  CommandSpec.hs  E2ESpec.hs  LibSpec.hs  Spec.hs
