cabal-version:       >=1.10
name:                org2any
version:             0.1.0.0
homepage:            https://github.com/serhiip/org2any#readme
bug-reports:         https://github.com/serhiip/org2any/issues
author:              Serhii Pererva
maintainer:          serhii.pererva@gmail.com
copyright:           Copyright (c) 2018 Serhii Pererva
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

library
  exposed-modules:
      Data.OrgMode.Sync.AppleScript
      Data.OrgMode.Sync.AppleScript.Internal
      Data.OrgMode.Sync.AppleScript.Types
      Data.OrgMode.Sync.Command
      Data.OrgMode.Sync.Executor
      Data.OrgMode.Sync.Logging
      Data.OrgMode.Sync.Types
      Data.OrgMode.Sync.ResultT
  hs-source-dirs:
      src
  other-modules:
      Data.OrgMode.Sync.OrgMode.Parsing
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall
  build-depends:
      aeson >=1.5.2.0 && <1.6
    , attoparsec ==0.13.2.4
    , base >=4.7 && <5
    , bytestring
    , containers ==0.6.0.1
    , directory ==1.3.6.0
    , fast-logger ==2.4.17
    , filepath ==1.4.2.1
    , free ==5.1.3
    , mtl ==2.2.2
    , random ==1.1
    , text >=1.2.0.0 && <1.3.0.0
    , time ==1.9.3
    , typed-process ==0.2.6.0
    , universum ==1.5.0
    , unix ==2.7.2.2
    , unordered-containers ==0.2.10.0
    , uuid ==1.3.13
    , org-mode ==2.0.0
  default-language: Haskell2010

executable org2any
  main-is:             Main.hs
  other-modules:       Args
  default-extensions:  NoImplicitPrelude
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , filepath ==1.4.2.1
    , optparse-applicative ==0.15.1.0
    , org2any
    , typed-process ==0.2.6.0
    , universum ==1.5.0
    , unix ==2.7.2.2
    , directory ==1.3.6.0

test-suite org2any-main-testsuite
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      AppleScriptSpec, CommandSpec, E2ESpec
  hs-source-dirs:     test
  default-extensions: NoImplicitPrelude
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      QuickCheck ==2.13.2
    , base >=4.7 && <5
    , free ==5.1.3
    , hspec ==2.7.1
    , org2any
    , universum ==1.5.0
    , text >=1.2.0.0 && <1.3.0.0
    , mtl ==2.2.2
    , fast-logger ==2.4.17
  default-language: Haskell2010
